updating color variables to use iowa-state naming, modal component complete

--- a/src/components/modal/modal.config.json
+++ b/src/components/modal/modal.config.json
@@ -1,8 +1,25 @@
 {
   "context": {
     "id": "modal-1",
-    "title": "Modal",
-    "content": "<p>Try hitting the <code>tab</code> key and notice how the focus stays within the modal itself. Also,<code>esc</code> to close modal.</p>",
-    "footer": "<button>Continue</button>"
-  }
+    "image": "../../img/Component-Modal-Square-Image_FPO.jpg",
+    "title": "Modal Title Lorem Ipsum Dolor Sit Amet",
+    "content": "<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>",
+    "call_to_action": "<a href=\"#\" class=\"button\">Button Label Lorem</a>"
+  },
+  "variants": [
+    {
+      "name": "with-form",
+      "context": {
+        "image": "../../img/Component-Modal-Square-Image_FPO.jpg",
+        "title": "Modal Title Lorem Ipsum Dolor Sit Amet",
+        "content": "<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>",
+        "form_field_label": "Email",
+        "input_type": "email",
+        "input_name": "email",
+        "input_id": "email",
+        "required": true,
+        "form_input_text": "Sign Up"
+      }
+    }
+  ]
 }
