--- a/src/components/page-preview.config.json
+++ b/src/components/page-preview.config.json
@@ -47,7 +47,7 @@
           ]
         },
         {
-          "title": "Admission & Aid",
+          "title": "Admission and Aid",
           "url": "https://www.iastate.edu/",
           "children": [
             {
