--- a/src/components/site-header/site-header.config.json
+++ b/src/components/site-header/site-header.config.json
@@ -46,7 +46,7 @@
         ]
       },
       {
-        "title": "Admission & Aid",
+        "title": "Admission and Aid",
         "url": "https://www.iastate.edu/",
         "children": [
           {
