--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "flickity": "^2.1.2",
     "flickity-imagesloaded": "^2.0.0",
     "focus-within": "^3.0.2",
+    "headroom.js": "^0.12.0",
     "js-cookie": "^2.2.1",
     "lazysizes": "^5.2.0",
     "lodash.kebabcase": "^4.1.1",
