--- a/src/components/modal/modal.config.json
+++ b/src/components/modal/modal.config.json
@@ -4,7 +4,7 @@
     "image": "../../img/Component-Modal-Square-Image_FPO.jpg",
     "title": "Modal Title Lorem Ipsum Dolor Sit Amet",
     "content": "<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>",
-    "call_to_action": "<a href=\"#\" class=\"button\">Button Label Lorem</a>"
+    "call_to_action": "<a href=\"#\" class=\"iastate22-button\">Button Label Lorem</a>"
   },
   "variants": [
     {
