adding image examples to the columns

--- a/src/components/pages/kitchen-sink.config.json
+++ b/src/components/pages/kitchen-sink.config.json
@@ -113,6 +113,12 @@
         "<h3>2-Column Heading Lorem</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>"
       ]
     },
+    "image_columns": {
+      "columns": [
+        "<h3>2-Column With Image</h3><img src=\"../../img/Component-Feature-Image-Small.jpg\" alt=\"\">",
+        "<h3>2-Column With Image</h3><img src=\"../../img/Component-Feature-Image-Small.jpg\" alt=\"\">"
+      ]
+    },
     "full_width_image": {
       "image": "../../img/Component-Centered-Image-Full-Width.jpg",
       "caption": "Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim."
