fixing some validation issues, updating main readme

--- a/src/components/site-footer/site-footer.config.json
+++ b/src/components/site-footer/site-footer.config.json
@@ -64,12 +64,12 @@
       {
         "title": "General Information",
         "email": "contact@iastate.edu",
-        "phone": "(515) 294-4111"
+        "phone": "515-294-4111"
       },
       {
         "title": "Admissions",
         "email": "admissions@iastate.ede",
-        "phone": "(515) 294-5836"
+        "phone": "515-294-5836"
       }
     ],
     "footer_utility_nav": [
