--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@types/bootstrap": "^5.1.9",
     "body-scroll-lock": "^4.0.0-beta.0",
     "bootstrap": "^5.1.3",
+    "debounce": "^1.2.1",
     "flickity": "^2.1.2",
     "flickity-imagesloaded": "^2.0.0",
     "focus-within": "^3.0.2",
