--- a/src/components/card/card.config.json
+++ b/src/components/card/card.config.json
@@ -31,6 +31,13 @@
         "cta": {
           "url": "https://www.iastate.edu/",
           "text": "Read More"
+        },
+        "modal": {
+          "id": "modal-1",
+          "image": "../../img/Component-Modal-Square-Image_FPO.jpg",
+          "title": "Modal Title Lorem Ipsum Dolor Sit Amet",
+          "content": "<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>",
+          "call_to_action": "<a href=\"#\" class=\"iastate22-button\">Button Label Lorem</a>"
         }
       }
     }
