--- a/src/components/pages/home.config.json
+++ b/src/components/pages/home.config.json
@@ -119,6 +119,13 @@
           "cta": {
             "url": "https://www.iastate.edu/",
             "text": "Read More"
+          },
+          "modal": {
+            "id": "modal-2",
+            "image": "../../img/Component-Modal-Square-Image_FPO.jpg",
+            "title": "Modal Title Lorem Ipsum Dolor Sit Amet",
+            "content": "<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>",
+            "call_to_action": "<a href=\"#\" class=\"iastate22-button\">Button Label Lorem</a>"
           }
         },
         {
@@ -131,6 +138,13 @@
           "cta": {
             "url": "https://www.iastate.edu/",
             "text": "Read More"
+          },
+          "modal": {
+            "id": "modal-3",
+            "image": "../../img/Component-Modal-Square-Image_FPO.jpg",
+            "title": "Modal Title Lorem Ipsum Dolor Sit Amet",
+            "content": "<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>",
+            "call_to_action": "<a href=\"#\" class=\"iastate22-button\">Button Label Lorem</a>"
           }
         },
         {
@@ -143,9 +157,26 @@
           "cta": {
             "url": "https://www.iastate.edu/",
             "text": "Read More"
+          },
+          "modal": {
+            "id": "modal-4",
+            "image": "../../img/Component-Modal-Square-Image_FPO.jpg",
+            "title": "Modal Title Lorem Ipsum Dolor Sit Amet",
+            "content": "<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>",
+            "call_to_action": "<a href=\"#\" class=\"iastate22-button\">Button Label Lorem</a>"
           }
         }
       ]
+    },
+    "location": {
+      "image": "../../img/home-location-jack-trice-stadium.jpg",
+      "caption": {
+        "text": "Jack Trice Stadium  Lorem Ipsum Dolor",
+        "link": {
+          "url": "https://www.iastate.edu/",
+          "text": "Explore Our Campus & Location"
+        }
+      }
     }
   }
 }
