--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "js-cookie": "^2.2.1",
     "lazysizes": "^5.2.0",
     "lodash.kebabcase": "^4.1.1",
+    "masonry-layout": "^4.2.2",
     "micromodal": "^0.4.2",
     "object-fit-images": "^3.2.4",
     "silc-accordion": "^0.10.2",
