updating home_announcement_alert link url to iastate.edu

--- a/src/components/pages/home.config.json
+++ b/src/components/pages/home.config.json
@@ -13,7 +13,7 @@
     "home_annoucenemt_alert": {
       "text": "Announcement Title Lorem Ipsum Dolor",
       "link": {
-        "url": "#",
+        "url": "https://www.iastate.edu/",
         "text": "Read More"
       }
     },
