correcting spelling issue with config for homepage announcement section

--- a/src/components/pages/home.config.json
+++ b/src/components/pages/home.config.json
@@ -10,7 +10,7 @@
         "url": "#"
       }
     },
-    "home_annoucenemt_alert": {
+    "home_announcement_alert": {
       "text": "Announcement Title Lorem Ipsum Dolor",
       "link": {
         "url": "https://www.iastate.edu/",
