Bugify tickets (Option in Main Menus for No HREF) https://bugify.idfive.com/issues/27577 and (Resize to Mobile Causes Mobile Menu Flash) https://bugify.idfive.com/issues/27563

--- a/src/components/page-preview.config.json
+++ b/src/components/page-preview.config.json
@@ -25,6 +25,28 @@
       ],
       "full_nav": [
         {
+          "title": "Test",
+          "url": "#",
+          "children": [
+            {
+              "title": "Sub Test",
+              "url": "https://www.iastate.edu/"
+            },
+            {
+              "title": "Sub Test 2",
+              "url": "https://www.iastate.edu/"
+            },
+            {
+              "title": "Sub Test 3",
+              "url": "https://www.iastate.edu/"
+            },
+            {
+              "title": "Sub Test 4",
+              "url": "https://www.iastate.edu/"
+            }
+          ]
+        },
+        {
           "title": "Academics",
           "url": "https://www.iastate.edu/",
           "children": [
