--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
   "dependencies": {
     "@popperjs/core": "^2.11.2",
     "@types/bootstrap": "^5.1.9",
-    "body-scroll-lock": "^4.0.0-beta.0",
+    "body-scroll-lock": "^3.1.5",
     "bootstrap": "^5.1.3",
     "debounce": "^1.2.1",
     "flickity": "^2.1.2",
