--- a/src/components/pages/admission-and-aid.config.json
+++ b/src/components/pages/admission-and-aid.config.json
@@ -51,6 +51,72 @@
         "video_id": "Pxu7m8QehcY",
         "caption": "Video caption lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna."
       }
+    },
+    "why_iowa": {
+      "label": "Why Iowa State University",
+      "callouts": [
+        {
+          "image": "../../img/admission-why-callout-1.jpg",
+          "title": "Study Science, Arts and Technology",
+          "link": {
+            "url": "https://www.iastate.edu/",
+            "title": "Majors, Minors and Certificates"
+          }
+        },
+        {
+          "image": "../../img/admission-why-callout-2.jpg",
+          "title": "Create, Innovate, Research and Build",
+          "link": {
+            "url": "https://www.iastate.edu/",
+            "title": "Opportunities Outside the Classroom"
+          }
+        },
+        {
+          "image": "../../img/admission-why-callout-3.jpg",
+          "title": "Learn in a Welcoming Community",
+          "link": {
+            "url": "https://www.iastate.edu/",
+            "title": "Diversity, Equity and Inclusion at lowa State"
+          }
+        }
+      ],
+      "statistic_label": "Class of 2025 Profile",
+      "statistics": [
+        {
+          "statistic_title": "X,XXX",
+          "statistic_text": "Enrolled Students"
+        },
+        {
+          "statistic_title": "XX%",
+          "statistic_text": "Out of State or International Students"
+        },
+        {
+          "statistic_title": "1 in 4",
+          "statistic_text": "Students are Black, Asian, Hispanic or Multiracial"
+        }
+      ]
+    },
+    "afford": {
+      "title": "Afford",
+      "intro": "<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>",
+      "link_set": {
+        "links": [
+          {
+            "url": "https://www.google.com/",
+            "text": "Try Our Net Price Calculator"
+          }
+        ]
+      },
+      "sections": [
+        {
+          "svg": "../../img/admission-why-callout-1.jpg",
+          "title": "Study Science, Arts and Technology",
+          "link": {
+            "url": "https://www.iastate.edu/",
+            "title": "Majors, Minors and Certificates"
+          }
+        }
+      ]
     }
   }
 }
