correcting issue on secondary and tertiary links where arrow was misplaced when it wrapped to multiple lines

--- a/src/components/link-tertiary/link-tertiary.config.json
+++ b/src/components/link-tertiary/link-tertiary.config.json
@@ -1,6 +1,6 @@
 {
   "context": {
-    "text": "Tertiary Link Style",
+    "text": "Tertiary Link Style Tertiary Link Style Tertiary Link Style",
     "url": "https://iastate.edu"
   }
 }
