admission and aid setting up "connect" section

--- a/src/components/pages/admission-and-aid.config.json
+++ b/src/components/pages/admission-and-aid.config.json
@@ -200,6 +200,9 @@
           "text": "International Student"
         }
       ]
+    },
+    "connect": {
+      "title": "Connect with Admissions"
     }
   }
 }
